# qt

hello/: CMakeLists.txt  hello1.cc  hello2.cc
